--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
 <body>
     <header>
-        <div class="banner">
-            <div class="banner-text">
+        <div class="header-banner">
+            <div class="header-banner-text">
                 <p><small>Happy New Year</small></p>
                 <h3>New Year Party<br>Celebration</h3>
             </div>
@@ -36,7 +36,20 @@
 
 
         </section>
-        <section>
+        <section class="section-2">
+            <div class="section-2-banner">
+                <div class="section-2-text">
+                    <h3>Welcome to midnight party</h3>
+                    <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+
+
+                </div>
+                <div class="section-2-img">
+
+                </div>
+
+            </div>
+
 
         </section>
         <section>
